--- a/website/index.html
+++ b/website/index.html
@@ -606,6 +606,15 @@
                   <h4 class="title waypoint">Vi Nguyen</h4>
                 </div>
               </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite2 team-sprite2-9"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Front-End Developer</h6>
+                  <h4 class="title waypoint">Huy Nguyen</h4>
+                </div>
+              </div>
               <div class="col-sm-3 hide">
                 <!-- <div class="team-img">
                   <div class="team-sprite team-sprite-17"></div>
