--- a/website/index.html
+++ b/website/index.html
@@ -487,7 +487,7 @@
                   <h4 class="title waypoint">Tuan Ha</h4>
                 </div>
               </div>
-              <div class="col-sm-3">
+              <!-- <div class="col-sm-3">
                 <div class="team-img">
                   <div class="team-sprite team-sprite-15"></div>
                 </div>
@@ -495,7 +495,7 @@
                   <h6 class="c-g waypoint">Senior Software Engineer</h6>
                   <h4 class="title waypoint">Kiet Mai</h4>
                 </div>
-              </div>
+              </div> -->
 
               <div class="col-sm-3">
                 <div class="team-img">
