add new people for july

--- a/website/index.html
+++ b/website/index.html
@@ -433,6 +433,15 @@
                   <h4 class="title waypoint">Bao Vu</h4>
                 </div>
               </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite3 team-sprite3-7"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Project Manager</h6>
+                  <h4 class="title waypoint">Khoa Tran</h4>
+                </div>
+              </div>
               <!-- <div class="col-sm-3">
                 <div class="team-img">
                   <div class="team-sprite team-sprite-3"></div>
@@ -608,7 +617,7 @@
                   <h4 class="title waypoint">Huy Phan</h4>
                 </div>
               </div>
-              <div class="col-sm-3">
+              <!-- <div class="col-sm-3">
                 <div class="team-img">
                   <div class="team-sprite2 team-sprite2-8"></div>
                 </div>
@@ -616,7 +625,7 @@
                   <h6 class="c-g waypoint">Administrator</h6>
                   <h4 class="title waypoint">Giang Nguyen</h4>
                 </div>
-              </div>
+              </div> -->
               <!-- <div class="col-sm-3">
                 <div class="team-img">
                   <div class="team-sprite2 team-sprite2-7"></div>
@@ -658,7 +667,7 @@
                   <div class="team-sprite2 team-sprite2-13"></div>
                 </div>
                 <div class="title-wrap">
-                  <h6 class="c-g waypoint">Senior Developer</h6>
+                  <h6 class="c-g waypoint">Developer</h6>
                   <h4 class="title waypoint">Phung Duong</h4>
                 </div>
               </div>
@@ -689,14 +698,59 @@
                   <h4 class="title waypoint">Linh Nguyen</h4>
                 </div>
               </div>
-              <div class="col-sm-3 hide">
-                <!-- <div class="team-img">
-                  <div class="team-sprite2 team-sprite2-18"></div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite3 team-sprite3-1"></div>
                 </div>
                 <div class="title-wrap">
-                  <h6 class="c-g waypoint">Front-End Developer</h6>
-                  <h4 class="title waypoint">Huy Nguyen</h4>
-                </div> -->
+                  <h6 class="c-g waypoint">Administrator</h6>
+                  <h4 class="title waypoint">Vie Nguyen</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite3 team-sprite3-2"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Developer</h6>
+                  <h4 class="title waypoint">Hoang Tran</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite3 team-sprite3-3"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Lead Developer</h6>
+                  <h4 class="title waypoint">Sung Dinh</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite3 team-sprite3-4"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Lead Developer</h6>
+                  <h4 class="title waypoint">Tien Doan</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite3 team-sprite3-5"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Test Engineer</h6>
+                  <h4 class="title waypoint">Que Chi Nguyen</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite3 team-sprite3-6"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Developer</h6>
+                  <h4 class="title waypoint">Hoang Nguyen</h4>
+                </div>
               </div>
             </div>
           </div>
