--- a/website/index.html
+++ b/website/index.html
@@ -704,7 +704,7 @@
                 </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Administrator</h6>
-                  <h4 class="title waypoint">Vie Nguyen</h4>
+                  <h4 class="title waypoint">Viet Nguyen</h4>
                 </div>
               </div>
               <div class="col-sm-3">
