--- a/website/index.html
+++ b/website/index.html
@@ -752,6 +752,43 @@
                   <h4 class="title waypoint">Hoang Nguyen</h4>
                 </div>
               </div>
+
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite3 team-sprite3-8"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">DevOps Engineer</h6>
+                  <h4 class="title waypoint">Thuan Nguyen</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite3 team-sprite3-9"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Senior Developer</h6>
+                  <h4 class="title waypoint">Kahi Phan</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite3 team-sprite3-10"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Senior Developer</h6>
+                  <h4 class="title waypoint">An Quach</h4>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="team-img">
+                  <div class="team-sprite3 team-sprite3-11"></div>
+                </div>
+                <div class="title-wrap">
+                  <h6 class="c-g waypoint">Senior Developer</h6>
+                  <h4 class="title waypoint">Hai Huynh</h4>
+                </div>
+              </div>
             </div>
           </div>
         </div>
