remove some people

--- a/website/index.html
+++ b/website/index.html
@@ -404,7 +404,7 @@
                 </div>
               </div>
 
-              <div class="col-sm-3">
+              <!-- <div class="col-sm-3">
                 <div class="team-img">
                   <div class="team-sprite2 team-sprite2-1"></div>
                 </div>
@@ -412,7 +412,7 @@
                   <h6 class="c-g waypoint">Project Manager</h6>
                   <h4 class="title waypoint">Ben Reinecke</h4>
                 </div>
-              </div>
+              </div> -->
 
               <div class="col-sm-3">
                 <div class="team-img">
@@ -553,7 +553,7 @@
                   <h4 class="title waypoint">Huy Vuong</h4>
                 </div>
               </div>
-              <div class="col-sm-3">
+              <!-- <div class="col-sm-3">
                 <div class="team-img">
                   <div class="team-sprite team-sprite-17"></div>
                 </div>
@@ -561,7 +561,7 @@
                   <h6 class="c-g waypoint">Developer</h6>
                   <h4 class="title waypoint">Nam Nguyen</h4>
                 </div>
-              </div>
+              </div> -->
 
               <div class="col-sm-3">
                 <div class="team-img">
