--- a/website/index.html
+++ b/website/index.html
@@ -768,7 +768,7 @@
                 </div>
                 <div class="title-wrap">
                   <h6 class="c-g waypoint">Senior Developer</h6>
-                  <h4 class="title waypoint">Kahi Phan</h4>
+                  <h4 class="title waypoint">Khai Phan</h4>
                 </div>
               </div>
               <div class="col-sm-3">
